src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Certificate_Date_Text__c</fullName>
        <description>The text that goes on the Certificate saying date of completion - put TODAY if the date is the date the Certificate was printed.</description>
        <label>Certificate Date Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Template_Name__c</fullName>
        <description>The filename of the template to be used for the Certificate for this course.</description>
        <label>Certificate Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <label>Course ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Course_NPS__c</fullName>
        <description>The final course NPS for this course.</description>
        <label>Course NPS</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Early_Bird__c</fullName>
        <label>Early Bird</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Price__c</fullName>
        <label>Early Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_NPS__c</fullName>
        <description>The final event NPS for this course</description>
        <label>Event NPS</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Price__c</fullName>
        <label>Full Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Klip_Group__c</fullName>
        <description>Name of the Klipfolio Klip the product should be grouped in.</description>
        <label>Klip Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <description>The maximum number of students we can accommodate in this course.</description>
        <label>Maximum Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceBook__c</fullName>
        <label>PriceBook</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <label>ShortName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Capacity__c</fullName>
        <description>The target attendance of the course for this instance.</description>
        <label>Target Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Quarter__c</fullName>
        <description>The quarter and year the product should be grouped in.</description>
        <label>Year Quarter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Course_ID__c</columns>
        <columns>Location__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Course_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Family, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Family</errorDisplayField>
        <errorMessage>Family(Course) is mandatory field.</errorMessage>
    </validationRules>
</CustomObject>